# yandex-tts-codesandbox-web-app

./: README.md  main.py  pyproject.toml  requirements.txt  utils.py
static/: index.html  script.js  style.css
